--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>LaCausaViva</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Causa viva</div>
+            <div class="nav-links">
+                <a href="#">INICIO</a>
+                <a href="#">ACERCA DE</a>
+                <a href="#">CONTACTANOS</a>
+                <a href="#">SERVICIOS</a>
+                <button class="donate-btn">DONAR</button>
+            </div>
+        </div>
+    </nav>
 
+    <main class="container">
+        <div class="content">
+            <div class="left-column">
+                <h1>DONAR A CAUSA VIVA</h1>
+                <p>Your tax-deductible donation saves lives and helps build a world where no one dies waiting for health care.</p>
+                <p class="contact-info">For questions about supporting Muso, please <a href="#">contact us</a>.</p>
+            </div>
+            <div class="right-column">
+            </div>
+        </div>
+    </main>
+    <script src="script.js"></script>
+</body>
+</html>
